布尔值，操作符，操作流程

--- a/Part.1.E.1.entrance.ipynb
+++ b/Part.1.E.1.entrance.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "False"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -140,7 +140,17 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +161,8 @@
     "# 请暂时忽略以上两行……\n",
     "\n",
     "1 == 2\n",
-    "1 != 2"
+    "1 != 2\n",
+    "'a' in 'basic'"
    ]
   },
   {
@@ -280,14 +291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "693 is odd.\n"
+      "812 is even.\n"
      ]
     }
    ],
@@ -343,24 +354,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "3\n",
-      "5\n",
-      "7\n",
-      "9\n"
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
      ]
     }
    ],
    "source": [
     "for i in range(10):\n",
-    "    if i % 2 != 0:\n",
+    "    if i % 2 == 0:\n",
     "        print(i)"
    ]
   },
@@ -395,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
@@ -433,15 +444,15 @@
     }
    ],
    "source": [
-    "for n in range(2, 100): #range(2,100)表示含左侧 2，不含右侧 100，是不是第三次看到这个说法了？\n",
+    "for n in range(2, 100):\n",
     "    if n == 2:\n",
     "        print(n)\n",
     "        continue\n",
-    "    for i in range(2, n):\n",
+    "    for i in range(2, n): \n",
     "        if (n % i) == 0:\n",
     "            break\n",
-    "    else:                  # 这里目前你可能看不懂…… 但先关注结果吧。\n",
-    "        print(n)         "
+    "    else:\n",
+    "        print(n) "
    ]
   },
   {
@@ -870,5 +881,5 @@
   "toc-showmarkdowntxt": false
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
