--- a/Part.1.E.2.values-and-their-operators.ipynb
+++ b/Part.1.E.2.values-and-their-operators.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -637,17 +637,7 @@
        "False"
       ]
      },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "65"
-      ]
-     },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -657,7 +647,37 @@
        "97"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "98"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "99"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,8 +687,10 @@
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "\n",
     "'A' > 'a'\n",
-    "ord('A')\n",
-    "ord('a')"
+    "ord('a')\n",
+    "ord('b')\n",
+    "ord('c')\n",
+    "ord('d')"
    ]
   },
   {
@@ -1009,16 +1031,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 4, 5, 6, 7]"
+       "[1, 2, 3, 4, 5, 6, 7, 6, 5, 4, 3, 2, 10]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1028,7 +1050,7 @@
        "{1, 2, 3, 4, 5, 6, 7}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1038,7 +1060,17 @@
        "[1, 2, 3, 4, 5, 6, 7]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 6, 5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,12 +1079,15 @@
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "\n",
-    "a = [1, 2, 3, 4, 5, 6, 7]\n",
+    "a = [1, 2, 3, 4, 5, 6, 7, 6, 5, 4, 3, 2, 1]\n",
     "b = set(a)\n",
     "c = list(b)\n",
+    "d = list(a)\n",
+    "a[-1] = 10\n",
     "a\n",
     "b\n",
-    "c"
+    "c\n",
+    "d"
    ]
   },
   {
@@ -1135,5 +1170,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
